[package]
name = "transys"
version = "0.1.0"
edition = "2021"

[lib]
name = "transys"
crate-type = ["staticlib", "rlib"]

[dependencies]
aig = { path = "../aig-rs" }
satif-minisat = { path = "../minisat-rs" }
satif-cadical = { path = "../cadical-rs" }
logic-form = { path = "../logic-form" }
satif = { path = "../satif" }

[features]
no_bound_check = ["logic-form/no_bound_check"]
