[package]
name = "transys"
version = "0.1.0"
edition = "2021"

[lib]
name = "transys"
crate-type = ["staticlib", "rlib"]

[dependencies]
aig = "=0.2.6"
satif-minisat = "=0.2.4"
satif-cadical = "=0.1.4"
logic-form = "=0.2.9"
satif = "=0.1.3"

[features]
no_bound_check = ["logic-form/no_bound_check"]
